Bump jdk 17->25 and other dependencies